...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="bottomRight" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F12-Rt-KWs" userLabel="pencil">
                                <rect key="frame" x="527" y="20" width="28" height="26"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="26" id="YZM-IM-jey"/>
                                </constraints>
                                <state key="normal" title="Clear" image="images.png"/>
                                <connections>
                                    <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="C4p-Cx-j7w"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CPJ-pn-iRp" userLabel="eclipse">
                                <rect key="frame" x="466" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWh-Xk-Ovz" userLabel="eraser">
                                <rect key="frame" x="344" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="htP-fJ-a9e" userLabel="triangle">
                                <rect key="frame" x="367" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FNp-PT-68r" userLabel="rectangle">
                                <rect key="frame" x="400" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M8E-hg-DSd" userLabel="square">
                                <rect key="frame" x="433" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CQS-Xa-sj9" userLabel="line">
                                <rect key="frame" x="499" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nVA-Ry-RuB" userLabel="Undo">
                                <rect key="frame" x="308" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLd-ZG-dxg" userLabel="triangle1">
                                <rect key="frame" x="366" y="49" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S0I-Px-M0g" userLabel="Save">
                                <rect key="frame" x="51" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRQ-bf-JL4" userLabel="lineWidth1">
                                <rect key="frame" x="142" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jh5-jY-uGh" userLabel="lineWidth2">
                                <rect key="frame" x="172" y="20" width="28" height="26"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L5q-dl-vRJ" userLabel="lineWidth3">
                                <rect key="frame" x="203" y="20" width="28" height="26"/>
                                <constraints>
...
