...
    trianglePressed1 = YES;
    trianglePressed = NO;
    linePressed = NO;
    squarePressed = NO;
    rectanglePressed = NO;

    red = 0.0/255.0;
    green = 0.0/255.0;
    blue = 0.0/255.0;
    
    self.colorSlider.value = 0;
}

- (IBAction)pencil:(id)sender
{
...
- (IBAction)save:(id)sender
{
    
    [self eventTrackingWithCategory:Save
                             action:@"Save started"
                              label:[self dateFormatter]];
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Select you Choice"
                                                                   message:@""
                                                            preferredStyle:UIAlertControllerStyleActionSheet];
    UIAlertAction *firstAction = [UIAlertAction actionWithTitle:@"Save to photo album"
                                                          style:UIAlertActionStyleDefault handler:^(UIAlertAction * action) {
                                                              [self eventTrackingWithCategory:Save
                                                                                       action:@"Save confirmed"
                                                                                        label:[self dateFormatter]];
                                                              [self savePhotoOfView:self.drawView];
                                                          }];
    UIAlertAction *secondAction = [UIAlertAction actionWithTitle:@"Cancel"
                                                           style:UIAlertActionStyleDefault handler:^(UIAlertAction * action) {
                                                               [self eventTrackingWithCategory:Save
                                                                                        action:@"Save canceled"
                                                                                         label:[self dateFormatter]];
                                                               [alert dismissViewControllerAnimated:YES completion:nil];
                                                           }];
...
                                                         }];
        [alert addAction:action];
        [self presentViewController:alert animated:YES completion:nil];
    }
    else
    {
        UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Success"
                                                                       message:@"Image was successfully saved in photoalbum"
                                                                preferredStyle:UIAlertControllerStyleAlert]; 
        UIAlertAction *action = [UIAlertAction actionWithTitle:@"Cancel"
                                                               style:UIAlertActionStyleDefault handler:^(UIAlertAction * action) {
                                                                   
                                                                   [self eventTrackingWithCategory:Save
...

-(void)addSegmentedCtrl
{
    UISegmentedControl *segmentedControl = [[UISegmentedControl alloc]
                                            initWithItems:[NSArray arrayWithObjects:[[UIImage imageNamed:@"red"]
                                                                                     imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal],
                                                           [[UIImage imageNamed:@"yellow"]
                                                            imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal],
                                                           [[UIImage imageNamed:@"green"]
                                                            imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal],
                                                           [[UIImage imageNamed:@"blue"]
                                                            imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal],
                                                           [[UIImage imageNamed:@"purple"]
                                                            imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal],
                                                           nil]];
    segmentedControl.frame = CGRectMake(self.view.frame.size.width - 70,self.view.frame.size.height - 85,90,30);
    segmentedControl.transform = CGAffineTransformMakeRotation(M_PI_2);
    segmentedControl.tintColor = [UIColor blackColor];
    [segmentedControl addTarget:self action:@selector(chooseColor:) forControlEvents:UIControlEventValueChanged];
...
